# optibot

./: .gitignore  LICENSE  README.md  pyproject.toml  run_optibot.py  setup.py  streamlit_app.py  streamlit_progress_bar.py
data/demo/ExpBot/: bag-info.txt  manifest-md5.txt  tagmanifest-md5.txt
data/demo/ExpBot/data/dataset/: chats_single.csv
data/demo/ExpBot/data/descriptive-md/: dataset.desc_md.xml
data/demo/ExpBot/data/technical-md/: dataset.tech_md.xml
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: OptiBot_LLM_Final_Insights.ipynb  OptiBot_LLM_Satisfaction_Analysis.ipynb  Optibot_LLM_Topic_Labeling.ipynb  Optibot_Topic_Modeling_Engineering.ipynb
optibot/: __init__.py  clients.py  config.py  llm_conversation_assessment.py  llm_final_insights.py  llm_topic_labeling.py  load_data.py  local_utils.py  main.py  optibot_modeling.py  optibot_topicmodeling.py  topic_modeling.py
