[tool.poetry]
name = "src"
version = "0.1.0"
description = "OptiBot enhances chatbot interactions using NLP and machine learning to identify and address common response issues, boosting accuracy and user satisfaction."
authors = ["Dominik Bacher <email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here

[tool.poetry.dev-dependencies]
# Add your development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
