[tool.poetry]
name = "optibot"
version = "0.1.0"
description = "OptiBot enhances chatbot interactions using NLP and machine learning to identify and address common response issues, boosting accuracy and user satisfaction."
authors = ["Dominik Bacher <dominikbacher@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.12"
streamlit = "1.32.2"
pandas = "1.5.3"
seaborn = "0.13.1"
gensim = "4.3.2"
nltk = "3.8.1"
psutil = "5.9.5"
tqdm = "4.66.2"
openai = "^1.14.3"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
optibot = "run_optibot:main"
optibot-terminal = "optibot.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
